--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true
         }
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^1.8"
     }
 }
