--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "pestphp/pest": "^1.22",
         "illuminate/collections": "^9.36",
         "phpdocumentor/reflection-docblock": "^5.3",
-        "symfony/validator": "^6.1"
+        "symfony/validator": "^6.1",
+        "symfony/string": "^6.1"
     },
     "config": {
         "allow-plugins": {
