--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "markhuot/data-object",
+    "name": "markhuot/data",
     "description": "Data objects",
     "license": "GPL-3.0-or-later",
     "authors": [
